# HyperSim-SDK

./: PROJECT_SUMMARY.docx  PROJECT_SUMMARY.md  QUICK_START.md  README.md  package-lock.json  package.json  tsconfig.json
architecture/: hypersim_sdk_architecture_specification.md
docs/: hypercore_integration.md  hyperevm_technical_specs.md  research_plan_hypercore_integration.md  research_plan_hyperevm.md  research_plan_hyperevm_hypercore.md  research_plan_multi_language_sdk.md  research_plan_plugin_streaming_architecture.md  research_plan_sdk_analysis.md  research_plan_stainless_sdk.md  research_plan_transaction_simulation.md  sdk_competition_analysis.md  simulation_requirements.md
examples/: comprehensive-usage.ts
extract/: alchemy_hyperevm.json  auth0_streaming.json  awesome_hyperevm.json  aws_performance.json  aws_retry_backoff_patterns.json  aws_retry_strategies.json  azure_sdk_patterns.json  blockhead_technical_analysis.json  chainlink_integration_guide.json  circuit_breaker_patterns.json  contract_testing_patterns.json  contract_vulnerability_detection.json  corewriter_precompiles.json  cross_chain_analysis.json  discord_architecture.json  dotnet_retry_patterns.json  dual_block_architecture.json  dual_block_architecture_specs.json  elixir_hyperliquid_sdk.json  ethereum_tracing_debugging.json  event_driven_patterns.json  exchange_endpoints.json  figma_plugin_security.json  foundry_fork_testing.json  fourpillars_hyperevm_analysis.json  gas_estimation_research.json  gate_hyperevm_integration.json  go_concurrency_2025.json  hardhat_forking_guide.json  hypercore_hyperevm_transfers.json  hypercore_integration.json  hypercore_overview.json  hyperevm_architecture.json  hyperevm_official_docs.json  hyperevm_tools.json  hyperevm_wiki_architecture.json  hyperliquid_api_docs.json  hyperliquid_official_docs.json  hyperliquid_order_types.json  hyperliquid_precompiles.json  (+51 more)
hypersim-sdk/: .eslintrc.js  .gitignore  LICENSE  README.md  jest.config.js  package.json  tsconfig.json
hypersim-sdk/examples/: basic-simulation.ts  bundle-optimization.ts  cross-layer.ts  error-handling.ts  index.ts  plugins.ts  streaming.ts
hypersim-sdk/src/: index.ts
hypersim-sdk/src/__tests__/: HyperSimSDK.test.ts  WebSocketClient.test.ts  core.test.ts  plugins.test.ts  setup.ts
hypersim-sdk/src/ai/: AIAnalyzer.ts
hypersim-sdk/src/clients/: HyperCoreClient.ts  HyperEVMClient.ts  WebSocketClient.ts
hypersim-sdk/src/core/: HyperSimSDK.ts
hypersim-sdk/src/plugins/: CachingPlugin.ts  LoggingPlugin.ts  MetricsPlugin.ts  PluginSystem.ts  RetryPlugin.ts  index.ts
hypersim-sdk/src/security/: APIKeyManager.ts  InputSanitizer.ts  MultiSignature.ts  OWASPValidator.ts  RateLimiter.ts  RequestSigner.ts  SecureStorage.ts  SecureWebSocket.ts  SecurityAuditor.ts  SecurityManager.ts  index.ts  types.ts
hypersim-sdk/src/types/: ai.ts  common.ts  errors.ts  hypercore.ts  hyperevm.ts  index.ts  network.ts  simulation.ts
hypersim-sdk/src/utils/: constants.ts  formatters.ts  validators.ts
memory/: research_results.json  todo_meta.json  url_source_meta.json
research/: hyperevm_hypercore_analysis.md  multi_language_strategy.md  plugin_streaming_architecture.md  stainless_architecture_analysis.md
sdks/go/: DOCUMENTATION.md  LICENSE  README.md  go.mod  go.sum
sdks/go/ai/: analyzer.go
sdks/go/clients/: hypercore_client.go  hyperevm_client.go  websocket_client.go
sdks/go/examples/: ai_analysis.go  basic_simulation.go  plugins_streaming.go
sdks/go/hypersim/: exports.go  sdk.go  sdk_test.go
sdks/go/plugins/: builtin.go  system.go  system_complete.go
sdks/go/security/: security_manager.go
sdks/go/types/: ai.go  errors.go  hypercore.go  network.go  simulation.go  websocket.go
sdks/go/utils/: constants.go  formatters.go  validators.go
sdks/java/: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  TECHNICAL.md  pom.xml
sdks/python/: README.md  pyproject.toml
sdks/python/hypersim_sdk/: __init__.py  client.py  exceptions.py
sdks/python/hypersim_sdk/ai/: __init__.py  ai_analyzer.py
sdks/python/hypersim_sdk/api/: client.py
sdks/python/hypersim_sdk/clients/: __init__.py  hypercore_client.py  hyperevm_client.py  websocket_client.py
sdks/python/hypersim_sdk/core/: __init__.py  hypersim_sdk.py
sdks/python/hypersim_sdk/examples/: asyncio_examples.py  basic_simulation.py  comprehensive_usage.py
sdks/python/hypersim_sdk/plugins/: __init__.py  builtin_plugins.py  plugin_system.py
sdks/python/hypersim_sdk/security/: __init__.py  api_key_manager.py  input_sanitizer.py  multi_signature.py  owasp_validator.py  placeholders.py  rate_limiter.py  request_signer.py  secure_storage.py  security_auditor.py  security_manager.py  types.py
sdks/python/hypersim_sdk/types/: __init__.py  ai.py  common.py  errors.py  hypercore.py  hyperevm.py  network.py  simulation.py  websocket.py
sdks/python/hypersim_sdk/utils/: __init__.py  constants.py  formatters.py  validators.py
sdks/rust/: Cargo.toml  README.md
sdks/rust/src/: error.rs  lib.rs
sdks/rust/src/ai/: analyzer.rs  mod.rs
sdks/rust/src/clients/: hypercore.rs  hyperevm.rs  mod.rs  websocket.rs
sdks/rust/src/core/: config.rs  mod.rs  sdk.rs
sdks/rust/src/plugins/: config.rs  mod.rs  system.rs  traits.rs
sdks/rust/src/security/: mod.rs
sdks/rust/src/types/: ai.rs  common.rs  hypercore.rs  hyperevm.rs  mod.rs  network.rs  simulation.rs  websocket.rs
sdks/rust/src/utils/: abi.rs  constants.rs  formatters.rs  mod.rs  validators.rs
src/: index.ts
src/ai/: analyzer.ts  optimizer.ts
src/clients/: hyperCore.ts  hyperEVM.ts  websocket.ts
src/core/: HyperSimSDK.ts  errors.ts  simulation.ts
src/plugins/: middleware.ts  system.ts
src/types/: common.ts  hypercore.ts  hyperevm.ts
src/utils/: abi.ts  constants.ts  formatters.ts  validators.ts
testing/conformance/: IMPLEMENTATION_SUMMARY.md  README.md  demo.py
testing/conformance/runners/rust/: Cargo.toml
testing/conformance/runners/rust/src/: lib.rs  main.rs
tools/doc-generator/: README.md  doc-generator.config.example.json  package.json  tsconfig.json
(+82 files in other folders)
