[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hypersim-sdk"
version = "1.0.0"
description = "The first Python SDK for HyperEVM transaction simulation with AI-powered analysis and cross-layer HyperCore integration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = [
    "hyperevm",
    "hypercore",
    "hyperliquid",
    "blockchain",
    "simulation",
    "transaction",
    "ai",
    "defi",
    "ethereum",
    "web3",
    "sdk",
    "asyncio",
    "pydantic"
]
authors = [
    {name = "MiniMax Agent", email = "agent@minimax.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed"
]
dependencies = [
    "pydantic>=2.5.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "openai>=1.12.0",
    "eth-account>=0.11.0",
    "eth-utils>=4.0.0",
    "web3>=6.15.0",
    "tenacity>=8.2.0",
    "structlog>=24.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0"
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0"
]

[project.urls]
Homepage = "https://hypersim.dev"
Documentation = "https://docs.hypersim.dev"
Repository = "https://github.com/hypersim/hypersim-sdk-python"
"Bug Reports" = "https://github.com/hypersim/hypersim-sdk-python/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/hypersim_sdk",
    "/README.md",
    "/LICENSE"
]

[tool.hatch.build.targets.wheel]
packages = ["hypersim_sdk"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["hypersim_sdk"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]
