[package]
name = "hypersim-sdk"
version = "1.0.0"
edition = "2021"
authors = ["HyperSim Team <team@hypersim.com>"]
license = "MIT"
description = "High-performance Rust SDK for HyperEVM transaction simulation with cross-layer HyperCore integration"
homepage = "https://hypersim.com"
repository = "https://github.com/hypersim/hypersim-sdk-rust"
keywords = ["blockchain", "ethereum", "simulation", "evm", "hyperevm"]
categories = ["web-programming", "api-bindings", "cryptography::cryptocurrencies"]
readme = "README.md"
rust-version = "1.70"

[features]
default = ["ai", "streaming", "plugins", "cross-layer"]
ai = ["dep:reqwest", "dep:openai-api-rs"]
streaming = ["dep:tokio-tungstenite", "dep:futures-util"]
plugins = ["dep:libloading", "dep:inventory"]
cross-layer = ["dep:ethereum-abi"]
full = ["ai", "streaming", "plugins", "cross-layer"]

[dependencies]
# Async runtime and utilities
tokio = { version = "1.35", features = ["full"] }
async-std = "1.12"
futures = "0.3"
futures-util = { version = "0.3", optional = true }
async-trait = "0.1"

# HTTP and WebSocket clients
reqwest = { version = "0.11", features = ["json", "stream"], optional = true }
tokio-tungstenite = { version = "0.21", features = ["native-tls"], optional = true }
tungstenite = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Networking and HTTP
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
tower = "0.4"
tower-http = { version = "0.5", features = ["full"] }

# Cryptography and Ethereum
ethers = { version = "2.0", features = ["abigen", "ws"] }
ethereum-abi = { version = "0.4", optional = true }
hex = "0.4"
keccak-hash = "0.10"
rlp = "0.5"

# Concurrent data structures
dashmap = "5.5"
parking_lot = "0.12"
crossbeam = "0.8"
rayon = "1.8"

# Memory management and performance
bytes = "1.5"
smallvec = "1.11"
tinyvec = "1.6"

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
log = "0.4"

# Plugin system (optional)
libloading = { version = "0.8", optional = true }
inventory = { version = "0.3", optional = true }

# AI integration (optional)
openai-api-rs = { version = "5.0", optional = true }

# Configuration
config = "0.13"
toml = "0.8"

# Metrics and monitoring
metrics = "0.22"
metrics-exporter-prometheus = { version = "0.13", optional = true }

# Connection pooling
bb8 = "0.8"
deadpool = "0.10"

# Compression
flate2 = "1.0"
lz4 = "1.24"

# Base64 and URL handling
base64 = "0.21"
url = "2.4"

# Process and system utilities
once_cell = "1.19"
lazy_static = "1.4"

# Development dependencies
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
mockall = "0.11"
proptest = "1.4"
wiremock = "0.5"
tempfile = "3.8"
pretty_assertions = "1.4"
rstest = "0.18"

# Benchmarks
[[bench]]
name = "simulation_bench"
harness = false

[[bench]]
name = "websocket_bench"
harness = false

[[bench]]
name = "abi_encoding_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.dev]
opt-level = 1
overflow-checks = true

[profile.test]
opt-level = 2

[workspace]
members = [
    ".",
    "examples/basic",
    "examples/streaming",
    "examples/plugins",
    "examples/cross-layer"
]
